...


    <Spinner
        android:id="@+id/spinnerOpciones"
        android:layout_width="99dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/rv_beer_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toEndOf="@+id/searchView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnAddBeer"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_add_beer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
